Try to fix navbar collapse on mobile

--- a/prodekoorg/static/scss/navbar.scss
+++ b/prodekoorg/static/scss/navbar.scss
@@ -22,7 +22,7 @@
   background-color: white;
   box-shadow: 0px 1px 2px rgba(0, 0, 0, 0.2);
 
-  a[data-toggle='collapse'] {
+  [data-toggle~='collapse'] {
     cursor: pointer;
   }
 
